--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Football leagues</title>
 </head>
 <body>
-    
+    <main class="main">Football</main>    
 
 
 
 
-    <source src="main.ts" type="">
+    <script src="dist/index.js"></script>
 </body>
 </html>
