--- a/index.html
+++ b/index.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football leagues</title>
-    <link rel="stylesheet" href="styles/style.css">
-    
-</head>
-<body onload="onInit()">
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body onload="onInit()">
     <main class="main">
-        <h1 class="title">Football Leagues</h1>
-        <div class="container--tabs">
-            <section class="row">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a href="#tab-0">England</a></li>
-                    <li class=""><a href="#tab-1">German</a></li>
-                    <li class=""><a href="#tab-2">Italian</a></li>
-                    <li class=""><a href="#tab-3">Spanish</a></li>
-                    <li class=""><a href="#tab-4">French</a></li>
-                </ul>
-                <div class="tab-content">
-                    <div id="tab-0" class="tab-pane active"> 
-                    </div> 
-                    <div id="tab-1" class="tab-pane">
-                    </div>
-                    <div id="tab-2" class="tab-pane">
-                    </div>
-                    <div id="tab-3" class="tab-pane">
-                    </div>
-                    <div id="tab-4" class="tab-pane">
-                    </div>
-                </div>
-            </section>
-        </div>
-
-    </main>    
+      <h1 class="title">Best Football Leagues</h1>
+      <div class="container--tabs">
+        <section class="row">
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#tab-0">England</a></li>
+            <li class=""><a href="#tab-1">German</a></li>
+            <li class=""><a href="#tab-2">Italian</a></li>
+            <li class=""><a href="#tab-3">Spanish</a></li>
+            <li class=""><a href="#tab-4">French</a></li>
+          </ul>
+          <div class="tab-content">
+            <div id="tab-0" class="tab-pane active"></div>
+            <div id="tab-1" class="tab-pane"></div>
+            <div id="tab-2" class="tab-pane"></div>
+            <div id="tab-3" class="tab-pane"></div>
+            <div id="tab-4" class="tab-pane"></div>
+          </div>
+        </section>
+      </div>
+    </main>
 
 
-
-    <script>var exports = {};</script>
     <script src="dist/index.js"></script>
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+  </body>
 </html>
